# Dae

./: CMakeLists.txt  Make.sh  README.md  main.dae  make.rb  nativelib.rb  rep.txt
.scripts/: find_functions.rb  make_android_compatible_so.rb  replace_text.rb
editors/syntax/mtsx/: Kilate.mtsx
include/dae/: error.h  file.h  hashmap.h  interpreter.h  lexer.h  node.h  parser.h  parser_native_funcs.h  scope_stack.h  vector.h
include/kilate/: bool.h  config.h  environment.h  error.h  file.h  hashmap.h  inline.h  interpreter.h  lexer.h  native.h  node.h  parser.h  parser_native_funcs.h  scope_stack.h  string.h  vector.h
include/kilate/cpp/: native.hpp
include/kilate/util/: native.h
src/: config.c  environment.c  error.c  file.c  hashmap.c  interpreter.c  lexer.c  main.c  native.c  node.c  parser.c  parser_native_funcs.c  scope_stack.c  string.c  vector.c
src/cpp/: native.cpp
src/util/: native.c
std/: print.klt  stream.klt
std/native/include/: io.h  sys.h
std/native/src/: io.c  main.c
tests/: main.dae  main.klt  main2.dae  print.dae  stream.dae  utils.klt
